objects/pse__Column_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>pse__Feature__c</fullName>
        <inlineHelpText>Defines the feature to apply preferences to. Values are: 0 (for Project Planner), 1 (for Resource Planner), 2 (for Project Task Gantt), 3 (for Timecards), 4 (for Timecard Approval) or 5 (for Timecard Task Time).</inlineHelpText>
        <label>Feature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Field__c</fullName>
        <inlineHelpText>Contains one or more API names for the fields, including cross-object fields, this column is based on. This is a system-generated field. Do not edit this field manually.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Order__c</fullName>
        <inlineHelpText>The order, from left to right, the column displays in the UI for the indicated feature.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user to whom the preferences are assigned.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Column_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Value__c</fullName>
        <inlineHelpText>The saved value of the respective field.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When true, the column is visible on the UI for the user.</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Width__c</fullName>
        <inlineHelpText>The width of the column, in pixels.</inlineHelpText>
        <label>Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Column Preferences</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Feature__c</columns>
        <columns>pse__Field__c</columns>
        <columns>pse__Order__c</columns>
        <columns>pse__User__c</columns>
        <columns>pse__Value__c</columns>
        <columns>pse__Visible__c</columns>
        <columns>pse__Width__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0}</displayFormat>
        <label>Column Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Column Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>